<resources>
    <string name="app_name">MovieAppCleanArchitecture</string>
    <string name="now_playing">Now Playing</string>
    <string name="superman">Superman</string>
    <string name="_4_5">4.5</string>
    <string name="movie_name">Movie Name</string>
    <string name="foto_banner_movie">Foto Banner Movie</string>
    <string name="title_movie">Superman</string>
    <string name="indonesia_malaysia_singapore">Indonesia, Malaysia, Singapore</string>
    <string name="lorem_ipsum">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don\'t look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn\'t anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</string>
    <string name="favorite_movie">Favorite Movie</string>
    <string name="save_movie">Save Movie</string>
    <string name="save_button">Save Button</string>
    <string name="my_favorite">My Favorite</string>
    <string name="title_favorite">Favorite Movie</string>
</resources>