<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:background="@color/white"
    android:layout_marginHorizontal="24dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rectangle_8_fff"
        android:paddingBottom="12dp"
        >

        <ImageView
            android:id="@+id/imageMovie"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:background="@drawable/image_rounded"
            android:contentDescription="@string/movie_name"
            android:scaleType="centerCrop"
            app:circularflow_radiusInDP="8dp"
            app:layout_constraintCircleRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@color/design_default_color_primary" />

        <TextView
            android:id="@+id/nameMovie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:maxLines="1"
            android:text="@string/superman"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageMovie" />

        <RatingBar
            android:id="@+id/ratingFood"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:numStars="5"
            android:rating="3"
            android:theme="@style/RatingBar"
            app:layout_constraintStart_toStartOf="@+id/nameMovie"
            app:layout_constraintTop_toBottomOf="@+id/nameMovie" />

        <TextView
            android:id="@+id/ratingNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/_4_5"
            app:layout_constraintBottom_toBottomOf="@+id/ratingFood"
            app:layout_constraintStart_toEndOf="@+id/ratingFood"
            app:layout_constraintTop_toTopOf="@+id/ratingFood" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>